// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`QR Code Components Snapshots > Props Validation > should handle empty shortCode gracefully 1`] = `
"<div data-v-9d2b417e="" class="qr-code-container">
  <div data-v-9d2b417e="" class="qr-code-wrapper" style="width: 200px; height: 200px;">
    <!-- Show loading initially -->
    <div data-v-9d2b417e="" class="flex items-center justify-center w-full h-full bg-gray-100 rounded-lg">
      <div data-v-9d2b417e="" class="text-center">
        <div data-v-9d2b417e="" class="animate-spin rounded-full h-8 w-8 border-b-2 border-blue-600 mx-auto"></div>
        <p data-v-9d2b417e="" class="text-xs text-gray-500 mt-2">QR-Code wird geladen...</p>
      </div>
    </div>
  </div><!-- Download Buttons - only show when QR code is loaded -->
  <!--v-if-->
  <!-- Info Text -->
  <p data-v-9d2b417e="" class="text-xs text-gray-500 text-center mt-2"> QR-Code für: <span data-v-9d2b417e="" class="font-mono"></span></p>
</div>"
`;

exports[`QR Code Components Snapshots > Props Validation > should handle minimal modal props 1`] = `
"<div class="fixed inset-0 bg-black bg-opacity-50 flex items-center justify-center z-50 p-4">
  <div class="bg-white rounded-lg shadow-xl max-w-md w-full max-h-[90vh] overflow-y-auto">
    <div class="px-6 py-4 border-b border-gray-200">
      <div class="flex items-center justify-between">
        <h3 class="text-lg font-semibold text-gray-900"> QR-Code für Kurzlink </h3><button class="text-gray-400 hover:text-gray-600 transition-colors"><svg class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12"></path>
          </svg></button>
      </div>
    </div>
    <div class="px-6 py-4">
      <!-- URL Info -->
      <div class="mb-6">
        <div class="mb-2"><label class="block text-sm font-medium text-gray-700 mb-1"> Kurzlink: </label>
          <div class="flex items-center gap-2"><code class="flex-1 px-3 py-2 bg-gray-50 border border-gray-300 rounded-md text-sm font-mono"></code><button class="px-3 py-2 text-sm bg-blue-600 text-white rounded-md hover:bg-blue-700 focus:outline-none focus:ring-2 focus:ring-blue-500 focus:ring-offset-2" title="Link kopieren"><svg class="h-4 w-4" fill="none" viewBox="0 0 24 24" stroke="currentColor">
                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M8 16H6a2 2 0 01-2-2V6a2 2 0 012-2h8a2 2 0 012 2v2m-6 12h8a2 2 0 002-2v-8a2 2 0 00-2-2h-8a2 2 0 00-2 2v8a2 2 0 002 2z"></path>
              </svg></button></div>
        </div>
        <div><label class="block text-sm font-medium text-gray-700 mb-1"> Ziel-URL: </label>
          <p class="text-sm text-gray-600 break-all"></p>
        </div>
      </div><!-- Size Selection -->
      <div class="mb-6"><label class="block text-sm font-medium text-gray-700 mb-2"> QR-Code Größe: </label><select class="w-full px-3 py-2 border border-gray-300 rounded-md focus:outline-none focus:ring-2 focus:ring-blue-500 focus:border-transparent">
          <option value="150">Klein (150px)</option>
          <option value="200">Mittel (200px)</option>
          <option value="300">Groß (300px)</option>
          <option value="400">Extra Groß (400px)</option>
        </select></div><!-- QR Code Display -->
      <div class="flex justify-center">
        <div class="qr-display-stub" short-code="" size="[object Object]" show-download="true">QR Display</div>
      </div>
    </div>
    <div class="px-6 py-4 border-t border-gray-200 bg-gray-50">
      <div class="flex justify-end"><button class="px-4 py-2 text-sm font-medium text-gray-700 bg-white border border-gray-300 rounded-md hover:bg-gray-50 focus:outline-none focus:ring-2 focus:ring-blue-500 focus:ring-offset-2"> Schließen </button></div>
    </div>
  </div>
</div>"
`;

exports[`QR Code Components Snapshots > QrCodeDisplay > should render with all props 1`] = `
"<div data-v-9d2b417e="" class="qr-code-container">
  <div data-v-9d2b417e="" class="qr-code-wrapper" style="width: 250px; height: 250px;">
    <!-- Show loading initially -->
    <div data-v-9d2b417e="" class="flex items-center justify-center w-full h-full bg-gray-100 rounded-lg">
      <div data-v-9d2b417e="" class="text-center">
        <div data-v-9d2b417e="" class="animate-spin rounded-full h-8 w-8 border-b-2 border-blue-600 mx-auto"></div>
        <p data-v-9d2b417e="" class="text-xs text-gray-500 mt-2">QR-Code wird geladen...</p>
      </div>
    </div>
  </div><!-- Download Buttons - only show when QR code is loaded -->
  <!--v-if-->
  <!-- Info Text -->
  <p data-v-9d2b417e="" class="text-xs text-gray-500 text-center mt-2"> QR-Code für: <span data-v-9d2b417e="" class="font-mono">test123</span></p>
</div>"
`;

exports[`QR Code Components Snapshots > QrCodeDisplay > should render with custom size 1`] = `
"<div data-v-9d2b417e="" class="qr-code-container">
  <div data-v-9d2b417e="" class="qr-code-wrapper" style="width: 300px; height: 300px;">
    <!-- Show loading initially -->
    <div data-v-9d2b417e="" class="flex items-center justify-center w-full h-full bg-gray-100 rounded-lg">
      <div data-v-9d2b417e="" class="text-center">
        <div data-v-9d2b417e="" class="animate-spin rounded-full h-8 w-8 border-b-2 border-blue-600 mx-auto"></div>
        <p data-v-9d2b417e="" class="text-xs text-gray-500 mt-2">QR-Code wird geladen...</p>
      </div>
    </div>
  </div><!-- Download Buttons - only show when QR code is loaded -->
  <!--v-if-->
  <!-- Info Text -->
  <p data-v-9d2b417e="" class="text-xs text-gray-500 text-center mt-2"> QR-Code für: <span data-v-9d2b417e="" class="font-mono">abc123</span></p>
</div>"
`;

exports[`QR Code Components Snapshots > QrCodeDisplay > should render with default props 1`] = `
"<div data-v-9d2b417e="" class="qr-code-container">
  <div data-v-9d2b417e="" class="qr-code-wrapper" style="width: 200px; height: 200px;">
    <!-- Show loading initially -->
    <div data-v-9d2b417e="" class="flex items-center justify-center w-full h-full bg-gray-100 rounded-lg">
      <div data-v-9d2b417e="" class="text-center">
        <div data-v-9d2b417e="" class="animate-spin rounded-full h-8 w-8 border-b-2 border-blue-600 mx-auto"></div>
        <p data-v-9d2b417e="" class="text-xs text-gray-500 mt-2">QR-Code wird geladen...</p>
      </div>
    </div>
  </div><!-- Download Buttons - only show when QR code is loaded -->
  <!--v-if-->
  <!-- Info Text -->
  <p data-v-9d2b417e="" class="text-xs text-gray-500 text-center mt-2"> QR-Code für: <span data-v-9d2b417e="" class="font-mono">abc123</span></p>
</div>"
`;

exports[`QR Code Components Snapshots > QrCodeDisplay > should render without download buttons 1`] = `
"<div data-v-9d2b417e="" class="qr-code-container">
  <div data-v-9d2b417e="" class="qr-code-wrapper" style="width: 200px; height: 200px;">
    <!-- Show loading initially -->
    <div data-v-9d2b417e="" class="flex items-center justify-center w-full h-full bg-gray-100 rounded-lg">
      <div data-v-9d2b417e="" class="text-center">
        <div data-v-9d2b417e="" class="animate-spin rounded-full h-8 w-8 border-b-2 border-blue-600 mx-auto"></div>
        <p data-v-9d2b417e="" class="text-xs text-gray-500 mt-2">QR-Code wird geladen...</p>
      </div>
    </div>
  </div><!-- Download Buttons - only show when QR code is loaded -->
  <!--v-if-->
  <!-- Info Text -->
  <p data-v-9d2b417e="" class="text-xs text-gray-500 text-center mt-2"> QR-Code für: <span data-v-9d2b417e="" class="font-mono">abc123</span></p>
</div>"
`;

exports[`QR Code Components Snapshots > QrCodeModal > should not render when closed 1`] = `"<!--v-if-->"`;

exports[`QR Code Components Snapshots > QrCodeModal > should render when open 1`] = `
"<div class="fixed inset-0 bg-black bg-opacity-50 flex items-center justify-center z-50 p-4">
  <div class="bg-white rounded-lg shadow-xl max-w-md w-full max-h-[90vh] overflow-y-auto">
    <div class="px-6 py-4 border-b border-gray-200">
      <div class="flex items-center justify-between">
        <h3 class="text-lg font-semibold text-gray-900"> QR-Code für Kurzlink </h3><button class="text-gray-400 hover:text-gray-600 transition-colors"><svg class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12"></path>
          </svg></button>
      </div>
    </div>
    <div class="px-6 py-4">
      <!-- URL Info -->
      <div class="mb-6">
        <div class="mb-2"><label class="block text-sm font-medium text-gray-700 mb-1"> Kurzlink: </label>
          <div class="flex items-center gap-2"><code class="flex-1 px-3 py-2 bg-gray-50 border border-gray-300 rounded-md text-sm font-mono">https://example.com/abc123</code><button class="px-3 py-2 text-sm bg-blue-600 text-white rounded-md hover:bg-blue-700 focus:outline-none focus:ring-2 focus:ring-blue-500 focus:ring-offset-2" title="Link kopieren"><svg class="h-4 w-4" fill="none" viewBox="0 0 24 24" stroke="currentColor">
                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M8 16H6a2 2 0 01-2-2V6a2 2 0 012-2h8a2 2 0 012 2v2m-6 12h8a2 2 0 002-2v-8a2 2 0 00-2-2h-8a2 2 0 00-2 2v8a2 2 0 002 2z"></path>
              </svg></button></div>
        </div>
        <div><label class="block text-sm font-medium text-gray-700 mb-1"> Ziel-URL: </label>
          <p class="text-sm text-gray-600 break-all">https://target.com</p>
        </div>
      </div><!-- Size Selection -->
      <div class="mb-6"><label class="block text-sm font-medium text-gray-700 mb-2"> QR-Code Größe: </label><select class="w-full px-3 py-2 border border-gray-300 rounded-md focus:outline-none focus:ring-2 focus:ring-blue-500 focus:border-transparent">
          <option value="150">Klein (150px)</option>
          <option value="200">Mittel (200px)</option>
          <option value="300">Groß (300px)</option>
          <option value="400">Extra Groß (400px)</option>
        </select></div><!-- QR Code Display -->
      <div class="flex justify-center">
        <div class="qr-display-stub" short-code="abc123" size="[object Object]" show-download="true">QR Display</div>
      </div>
    </div>
    <div class="px-6 py-4 border-t border-gray-200 bg-gray-50">
      <div class="flex justify-end"><button class="px-4 py-2 text-sm font-medium text-gray-700 bg-white border border-gray-300 rounded-md hover:bg-gray-50 focus:outline-none focus:ring-2 focus:ring-blue-500 focus:ring-offset-2"> Schließen </button></div>
    </div>
  </div>
</div>"
`;

exports[`QR Code Components Snapshots > QrCodeModal > should render with long URLs 1`] = `
"<div class="fixed inset-0 bg-black bg-opacity-50 flex items-center justify-center z-50 p-4">
  <div class="bg-white rounded-lg shadow-xl max-w-md w-full max-h-[90vh] overflow-y-auto">
    <div class="px-6 py-4 border-b border-gray-200">
      <div class="flex items-center justify-between">
        <h3 class="text-lg font-semibold text-gray-900"> QR-Code für Kurzlink </h3><button class="text-gray-400 hover:text-gray-600 transition-colors"><svg class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12"></path>
          </svg></button>
      </div>
    </div>
    <div class="px-6 py-4">
      <!-- URL Info -->
      <div class="mb-6">
        <div class="mb-2"><label class="block text-sm font-medium text-gray-700 mb-1"> Kurzlink: </label>
          <div class="flex items-center gap-2"><code class="flex-1 px-3 py-2 bg-gray-50 border border-gray-300 rounded-md text-sm font-mono">https://very-long-domain-name.example.com/very/long/path/abc123</code><button class="px-3 py-2 text-sm bg-blue-600 text-white rounded-md hover:bg-blue-700 focus:outline-none focus:ring-2 focus:ring-blue-500 focus:ring-offset-2" title="Link kopieren"><svg class="h-4 w-4" fill="none" viewBox="0 0 24 24" stroke="currentColor">
                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M8 16H6a2 2 0 01-2-2V6a2 2 0 012-2h8a2 2 0 012 2v2m-6 12h8a2 2 0 002-2v-8a2 2 0 00-2-2h-8a2 2 0 00-2 2v8a2 2 0 002 2z"></path>
              </svg></button></div>
        </div>
        <div><label class="block text-sm font-medium text-gray-700 mb-1"> Ziel-URL: </label>
          <p class="text-sm text-gray-600 break-all">https://another-very-long-domain-name.example.com/with/many/path/segments/and/parameters?param1=value1&amp;param2=value2</p>
        </div>
      </div><!-- Size Selection -->
      <div class="mb-6"><label class="block text-sm font-medium text-gray-700 mb-2"> QR-Code Größe: </label><select class="w-full px-3 py-2 border border-gray-300 rounded-md focus:outline-none focus:ring-2 focus:ring-blue-500 focus:border-transparent">
          <option value="150">Klein (150px)</option>
          <option value="200">Mittel (200px)</option>
          <option value="300">Groß (300px)</option>
          <option value="400">Extra Groß (400px)</option>
        </select></div><!-- QR Code Display -->
      <div class="flex justify-center">
        <div class="qr-display-stub" short-code="abc123" size="[object Object]" show-download="true">QR Display</div>
      </div>
    </div>
    <div class="px-6 py-4 border-t border-gray-200 bg-gray-50">
      <div class="flex justify-end"><button class="px-4 py-2 text-sm font-medium text-gray-700 bg-white border border-gray-300 rounded-md hover:bg-gray-50 focus:outline-none focus:ring-2 focus:ring-blue-500 focus:ring-offset-2"> Schließen </button></div>
    </div>
  </div>
</div>"
`;

exports[`QR Code Components Snapshots > QrCodeModal > should render with special characters in URLs 1`] = `
"<div class="fixed inset-0 bg-black bg-opacity-50 flex items-center justify-center z-50 p-4">
  <div class="bg-white rounded-lg shadow-xl max-w-md w-full max-h-[90vh] overflow-y-auto">
    <div class="px-6 py-4 border-b border-gray-200">
      <div class="flex items-center justify-between">
        <h3 class="text-lg font-semibold text-gray-900"> QR-Code für Kurzlink </h3><button class="text-gray-400 hover:text-gray-600 transition-colors"><svg class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12"></path>
          </svg></button>
      </div>
    </div>
    <div class="px-6 py-4">
      <!-- URL Info -->
      <div class="mb-6">
        <div class="mb-2"><label class="block text-sm font-medium text-gray-700 mb-1"> Kurzlink: </label>
          <div class="flex items-center gap-2"><code class="flex-1 px-3 py-2 bg-gray-50 border border-gray-300 rounded-md text-sm font-mono">https://example.com/special123</code><button class="px-3 py-2 text-sm bg-blue-600 text-white rounded-md hover:bg-blue-700 focus:outline-none focus:ring-2 focus:ring-blue-500 focus:ring-offset-2" title="Link kopieren"><svg class="h-4 w-4" fill="none" viewBox="0 0 24 24" stroke="currentColor">
                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M8 16H6a2 2 0 01-2-2V6a2 2 0 012-2h8a2 2 0 012 2v2m-6 12h8a2 2 0 002-2v-8a2 2 0 00-2-2h-8a2 2 0 00-2 2v8a2 2 0 002 2z"></path>
              </svg></button></div>
        </div>
        <div><label class="block text-sm font-medium text-gray-700 mb-1"> Ziel-URL: </label>
          <p class="text-sm text-gray-600 break-all">https://target.com/path?param=value&amp;other=test#section</p>
        </div>
      </div><!-- Size Selection -->
      <div class="mb-6"><label class="block text-sm font-medium text-gray-700 mb-2"> QR-Code Größe: </label><select class="w-full px-3 py-2 border border-gray-300 rounded-md focus:outline-none focus:ring-2 focus:ring-blue-500 focus:border-transparent">
          <option value="150">Klein (150px)</option>
          <option value="200">Mittel (200px)</option>
          <option value="300">Groß (300px)</option>
          <option value="400">Extra Groß (400px)</option>
        </select></div><!-- QR Code Display -->
      <div class="flex justify-center">
        <div class="qr-display-stub" short-code="abc123" size="[object Object]" show-download="true">QR Display</div>
      </div>
    </div>
    <div class="px-6 py-4 border-t border-gray-200 bg-gray-50">
      <div class="flex justify-end"><button class="px-4 py-2 text-sm font-medium text-gray-700 bg-white border border-gray-300 rounded-md hover:bg-gray-50 focus:outline-none focus:ring-2 focus:ring-blue-500 focus:ring-offset-2"> Schließen </button></div>
    </div>
  </div>
</div>"
`;
